# GameEngine

./: CMakeLists.txt  READMD.md
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.h  Export.h
Engine/include/Engine/: Application.h  EntryPoint.h
Engine/private/: Core.h
Engine/src/: Application.cpp
